--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   background-color: #fff;
   border-radius: 15px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
@@ -8,4 +8,4 @@
   text-align: center;
   margin: auto;
   margin-top: 20px;
-}
+} */
